Fixed overflow problem in front page

--- a/jekyll-mdl-master/_sass/_layout.scss
+++ b/jekyll-mdl-master/_sass/_layout.scss
@@ -1,3 +1,8 @@
+// CUSTOM
+.mdl-layout__content {
+  overflow: unset;
+}
+
 //
 // Generals styles for material design light elements
 //
